--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -26,17 +26,48 @@
 		"main.ts"
 		,"input.ts"
 		,"loader.ts"
-		,"tilelevel.ts"
-		,"tilelevelutil.ts"
-		,"zvoogtypes.ts"
-		,"zvoogplugin.ts"
+		,"tilelevel/tilelevel.ts"
+		,"tilelevel/tilelevelutil.ts"
+		,"tilelevel/tilepolygon.ts"
+		,"tilelevel/tilepath.ts"
+		,"tilelevel/tilerectangle.ts"
+		,"tilelevel/tileline.ts"
+		,"tilelevel/tiletext.ts"
+
+		,"muzxboxproject.ts"
+
 		,"zvoogutil.ts"
-		,"filters/ZvoogFxGain.ts"
-		,"filters/WAFEcho.ts"
-		,"filters/WAFEqualizer.ts"
-		,"sources/ZvoogSineSource.ts"
-		,"sources/WAFInsSource.ts"
-		,"sources/WAFPercSource.ts"
-		,"sources/AudioFileSource.ts"
+		,"plugins/zvoogstore.ts"
+		,"plugins/filters/ZvoogFxGain.ts"
+		,"plugins/filters/WAFEcho.ts"
+		,"plugins/filters/WAFEqualizer.ts"
+		,"plugins/performers/ZvoogSineSource.ts"
+		,"plugins/performers/WAFInsSource.ts"
+		,"plugins/performers/WAFPercSource.ts"
+		,"plugins/performers/AudioFileSource.ts"
+		,"songdata/zvoogmeter.ts"
+		,"songdata/zvoogcurvepoint.ts"
+		,"songdata/zvoogmeasure.ts"
+
+		,"plugins/zvoogplugin.ts"
+		,"songdata/zvoogparameterdata.ts"
+		,"songdata/zvoogvoice.ts"
+		,"songdata/zvoogmeasurechord.ts"
+
+		,"songdata/zvoogchordstrings.ts"
+		,"songdata/zvoogenvelope.ts"
+		,"songdata/zvoogpitch.ts"
+		,"songdata/zvoogprogression.ts"
+
+		
+		,"plugins/performers/ZvoogPerformerStub.ts"
+		,"plugins/filters/ZvoogFilterStub.ts"
+		,"songdata/zvoogtrack.ts"
+		,"songdata/zvoogschedule.ts"
+		,"songdata/zvoogfiltersetting.ts"
+		,"songdata/zvoogperformersetting.ts"
+		,"plugins/zvoogfilterplugin.ts"
+		,"plugins/zvoogperformerplugin.ts"
+		,"plugins/zvoogpluginloader.ts"
 	]
 }
