--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -83,6 +83,8 @@
 		,"renderer/MeasureInfoRenderer.ts"
 		,"renderer/PianoRollRenderer.ts"
 		,"renderer/GridRenderer.ts"
+		,"renderer/TimeLineRenderer.ts"
+		
 		
 	]
 }
