--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -88,6 +88,7 @@
 		,"renderer/TimeLineRenderer.ts"
 		,"menu/LayerSelector.ts"
 		,"uiinput/focusManagement.ts"
+		,"renderer/LeftKeysRenderer.ts"
 		
 	]
 }
