--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -88,7 +88,8 @@
 		,"renderer/TimeLineRenderer.ts"
 		,"menu/LayerSelector.ts"
 		,"uiinput/focusManagement.ts"
-		,"uiinput/FocusOtherLevel.ts"
+		,"uiinput/FocusZoomFar.ts"
+		,"uiinput/FocusZoomBig.ts"
 		,"uiinput/FocusZoomMeasure.ts"
 		,"uiinput/FocusZoomNote.ts"
 		,"uiinput/FocusZoomSong.ts"
