--- a/project/customcomponents/testsong/tsconfig.json
+++ b/project/customcomponents/testsong/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2015"
-        ,"outFile": "../../web/testschedule.js"
+        ,"outFile": "../../web/test/testschedule.js"
         //,"outDir":"../js"
 		,"strictNullChecks": true
 		,"alwaysStrict": true
