--- a/project/customcomponents/testwafperformer/tsconfig.json
+++ b/project/customcomponents/testwafperformer/tsconfig.json
@@ -26,6 +26,7 @@
 		
 		
 		"wafplugin.ts"
+        ,"../../publicapi/musicenginedeclarations.ts"
         ,"../../publicapi/musicenginetypes.ts"
 	]
 }
