--- a/ts4/source/application/tsconfig.json
+++ b/ts4/source/application/tsconfig.json
@@ -24,7 +24,9 @@
 	"files": [
         "treevalue/treevalue.ts"
         ,"startup.ts"
-
+        ,"ui/renderer.ts"
+        ,"ui/toolbar/toolbarpanel.ts"
+        ,"ui/mixer/uimixer.ts"
         ,"../tilelevel/apitilelevel.ts"
 	]
 }
