--- a/ts4/source/application/tsconfig.json
+++ b/ts4/source/application/tsconfig.json
@@ -27,6 +27,10 @@
         ,"ui/renderer.ts"
         ,"ui/toolbar/toolbarpanel.ts"
         ,"ui/mixer/uimixer.ts"
+        ,"ui/debugPane/debuglayer.ts"
+        ,"data/mixerdata.ts"
+        ,"data/testproject.ts"
+        ,"data/musicmetremath.ts"
         ,"../tilelevel/apitilelevel.ts"
 	]
 }
