--- a/ts4/source/application/tsconfig.json
+++ b/ts4/source/application/tsconfig.json
@@ -26,11 +26,15 @@
         ,"startup.ts"
         ,"ui/renderer.ts"
         ,"ui/toolbar/toolbarpanel.ts"
-        ,"ui/mixer/uimixer.ts"
+        ,"ui/mixer/baroctave.ts"
+		,"ui/mixer/mixertrack.ts"
+		,"ui/mixer/trackbar.ts"
+		,"ui/mixer/uimixer.ts"
         ,"ui/debugPane/debuglayer.ts"
         ,"data/mixerdata.ts"
         ,"data/testproject.ts"
         ,"data/musicmetremath.ts"
+		,"data/mixerdatamath.ts"
         ,"../tilelevel/apitilelevel.ts"
 	]
 }
