--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -28,6 +28,7 @@
         ,"ui/toolbar/toolbarpanel.ts"
         ,"ui/toolbar/toolbutton.ts"
 		,"ui/rightmenu/menupanel.ts"
+		,"ui/rightmenu/menuitem.ts"
         ,"ui/mixer/baroctave.ts"
 		,"ui/mixer/mixertrack.ts"
 		,"ui/mixer/trackbar.ts"
