--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -28,11 +28,13 @@
         ,"ui/toolbar/toolbarpanel.ts"
         ,"ui/toolbar/toolbutton.ts"
 		,"ui/rightmenu/menupanel.ts"
-		,"ui/rightmenu/menuitem.ts"
+        ,"ui/rightmenu/menuitem.ts"
+        ,"ui/rightmenu/menudata.ts"
         ,"ui/mixer/baroctave.ts"
 		,"ui/mixer/mixertrack.ts"
 		,"ui/mixer/trackbar.ts"
-		,"ui/mixer/uimixer.ts"
+        ,"ui/mixer/uimixer.ts"
+        ,"ui/buttons/iconlabelbutton.ts"
 		,"ui/iconlabels.ts"
         ,"ui/debugPane/debuglayer.ts"
         ,"data/mixerdata.ts"
