--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -35,6 +35,7 @@
 		,"ui/mixer/mixertrack.ts"
 		,"ui/mixer/trackbar.ts"
         ,"ui/mixer/uimixer.ts"
+        ,"ui/mixer/mixerlevel.ts"
         ,"ui/buttons/iconlabelbutton.ts"
 		,"ui/iconlabels.ts"
         ,"ui/debugPane/debuglayer.ts"
