--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -24,6 +24,7 @@
 	"files": [
         "treevalue/treevalue.ts"
         ,"startup.ts"
+        ,"commanddispatcher.ts"
         ,"ui/renderer.ts"
         ,"ui/localedictionary.ts"
         ,"ui/toolbar/toolbarpanel.ts"
@@ -32,10 +33,10 @@
         ,"ui/rightmenu/menuitem.ts"
         ,"ui/rightmenu/menudata.ts"
         ,"ui/mixer/baroctave.ts"
-		,"ui/mixer/mixertrack.ts"
-		,"ui/mixer/trackbar.ts"
+		,"ui/mixer/octavecontent.ts"
+		,"ui/mixer/mixerbar.ts"
         ,"ui/mixer/uimixer.ts"
-        ,"ui/mixer/mixerlevel.ts"
+        ,"ui/mixer/mixerzoomlevel.ts"
         ,"ui/buttons/iconlabelbutton.ts"
 		,"ui/iconlabels.ts"
         ,"ui/debugPane/debuglayer.ts"
