--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -25,6 +25,7 @@
         "treevalue/treevalue.ts"
         ,"startup.ts"
         ,"commanddispatcher.ts"
+        ,"midi/MIDIFileImporter.ts"
         ,"ui/renderer.ts"
         ,"ui/localedictionary.ts"
         ,"ui/toolbar/toolbarpanel.ts"
