--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -32,11 +32,11 @@
 		,"ui/rightmenu/menupanel.ts"
         ,"ui/rightmenu/menuitem.ts"
         ,"ui/rightmenu/menudata.ts"
-        ,"ui/mixer/baroctave.ts"
-		,"ui/mixer/octavecontent.ts"
-		,"ui/mixer/mixerbar.ts"
+        ,"ui/mixer/grid/baroctave.ts"
+		,"ui/mixer/grid/octavecontent.ts"
+		,"ui/mixer/grid/mixerbar.ts"
         ,"ui/mixer/uimixer.ts"
-        ,"ui/mixer/mixerzoomlevel.ts"
+        ,"ui/mixer/grid/mixerzoomlevel.ts"
         ,"ui/buttons/iconlabelbutton.ts"
 		,"ui/iconlabels.ts"
         ,"ui/debugPane/debuglayer.ts"
