--- a/riffshareiii/ts/mzxbx/baseapplication/tsconfig.json
+++ b/riffshareiii/ts/mzxbx/baseapplication/tsconfig.json
@@ -32,5 +32,81 @@
         ,"./code/loader.ts"
         ,"./code/MIDIFileImporter.ts"
 		,"./code/GPImporter.ts"
+
+		,"./code/importalphatab/ImporterSettings.ts"
+		,"./code/importalphatab/ScoreImporter.ts"
+		,"./code/importalphatab/MusicFontSymbol.ts"
+
+		,"./code/importalphatab/Gp3To5Importer.ts"
+		
+		,"./code/importalphatab/IReadable.ts"
+		,"./code/importalphatab/Settings.ts"
+		,"./code/importalphatab/Score.ts"
+		,"./code/importalphatab/RepeatGroup.ts"
+		,"./code/importalphatab/AccentuationType.ts"
+		,"./code/importalphatab/AccidentalType.ts"
+		,"./code/importalphatab/Automation.ts"
+		,"./code/importalphatab/Bar.ts"
+		,"./code/importalphatab/Beat.ts"
+		,"./code/importalphatab/BendPoint.ts"
+		,"./code/importalphatab/BendStyle.ts"
+		,"./code/importalphatab/BendType.ts"
+		,"./code/importalphatab/BrushType.ts"
+		,"./code/importalphatab/Chord.ts"
+		,"./code/importalphatab/Clef.ts"
+		,"./code/importalphatab/Fermata.ts"
+		,"./code/importalphatab/KeySignature.ts"
+		,"./code/importalphatab/KeySignatureType.ts"
+		,"./code/importalphatab/MasterBar.ts"
+		,"./code/importalphatab/MidiUtils.ts"
+		,"./code/importalphatab/Duration.ts"
+		,"./code/importalphatab/Ottavia.ts"
+		,"./code/importalphatab/Staff.ts"
+		,"./code/importalphatab/Track.ts"
+		,"./code/importalphatab/Voice.ts"
+		,"./code/importalphatab/SimileMark.ts"
+		,"./code/importalphatab/Note.ts"
+		,"./code/importalphatab/NoteAccidentalMode.ts"
+		,"./code/importalphatab/HarmonicType.ts"
+		,"./code/importalphatab/WhammyType.ts"
+		,"./code/importalphatab/TripletFeel.ts"
+		,"./code/importalphatab/Tuning.ts"
+		,"./code/importalphatab/TupletGroup.ts"
+		,"./code/importalphatab/VibratoType.ts"
+		,"./code/importalphatab/SlideOutType.ts"
+		,"./code/importalphatab/SlideInType.ts"
+		,"./code/importalphatab/PickStroke.ts"
+		
+		,"./code/importalphatab/GraceGroup.ts"
+		,"./code/importalphatab/GraceType.ts"
+		,"./code/importalphatab/Fingers.ts"
+		,"./code/importalphatab/CrescendoType.ts"
+		,"./code/importalphatab/DynamicValue.ts"
+		,"./code/importalphatab/Lyrics.ts"
+		,"./code/importalphatab/PlaybackInformation.ts"
+		,"./code/importalphatab/InstrumentArticulation.ts"
+
+		,"./code/importalphatab/PercussionMapper.ts"
+		
+		,"./code/importalphatab/NotationSettings.ts"
+		,"./code/importalphatab/Lazy.ts"
+		,"./code/importalphatab/ModelUtils.ts"
+		,"./code/importalphatab/DynamicValue.ts"
+		,"./code/importalphatab/Fingers.ts"
+		,"./code/importalphatab/Section.ts"
+		,"./code/importalphatab/TripletFeel.ts"
+		,"./code/importalphatab/IOHelper.ts"
+		,"./code/importalphatab/ByteBuffer.ts"
+		,"./code/importalphatab/IReadable.ts"
+		,"./code/importalphatab/IWriteable.ts"
+		,"./code/importalphatab/TypeConversions.ts"
+		,"./code/importalphatab/BeatCloner.ts"
+		,"./code/importalphatab/NoteCloner.ts"
+		,"./code/importalphatab/BendPointCloner.ts"
+		,"./code/importalphatab/Color.ts"
+		,"./code/importalphatab/BeamDirection.ts"
+		,"./code/importalphatab/AutomationCloner.ts"
+		,"./code/importalphatab/GeneralMidi.ts"
+
     ]
 }
