--- a/riffshareiii/ts/mzxbx/util/tsconfig.json
+++ b/riffshareiii/ts/mzxbx/util/tsconfig.json
@@ -23,6 +23,8 @@
     },
     "files": [
         "./metre.ts",
+        "./loading.ts",
+        "./flow.ts",
         "../publictypes/musicenginetypes.ts",
 		
 
