--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -40,6 +40,7 @@
         ,"ui/mixer/grid/baroctave.ts"
 		,"ui/mixer/grid/octavecontent.ts"
 		,"ui/mixer/grid/mixerbar.ts"
+		,"ui/mixer/grid/textCommentsContent.ts"
         ,"ui/mixer/uimixer.ts"
         ,"ui/mixer/grid/mixerzoomlevel.ts"
         ,"ui/buttons/iconlabelbutton.ts"
