--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -45,6 +45,7 @@
         ,"ui/mixer/uimixer.ts"
         ,"ui/mixer/grid/mixerzoomlevel.ts"
 		,"ui/mixer/fan/fanpane.ts"
+		,"ui/mixer/fan/performericon.ts"
         ,"ui/buttons/iconlabelbutton.ts"
 		
 		,"ui/iconlabels.ts"
