--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -46,6 +46,8 @@
         ,"ui/mixer/grid/mixerzoomlevel.ts"
 		,"ui/mixer/fan/fanpane.ts"
 		,"ui/mixer/fan/performericon.ts"
+		,"ui/mixer/fan/filtericon.ts"
+		,"ui/mixer/fan/spearconnection.ts"
         ,"ui/buttons/iconlabelbutton.ts"
 		
 		,"ui/iconlabels.ts"
