--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -48,6 +48,7 @@
 		,"ui/mixer/fan/performericon.ts"
 		,"ui/mixer/fan/samplericon.ts"
 		,"ui/mixer/fan/filtericon.ts"
+		,"ui/mixer/fan/controlconnection.ts"
 		,"ui/mixer/fan/spearconnection.ts"
         ,"ui/buttons/iconlabelbutton.ts"
 		
