--- a/riffshareiii/ts/tilelevel/tsconfig.json
+++ b/riffshareiii/ts/tilelevel/tsconfig.json
@@ -22,7 +22,7 @@
         "types": []
     },
     "files": [
-        "./TileLevel.ts",
+        "./tilelevel.ts",
         "./shortnames.ts",
         "./tilelevelutil.ts",
 		"./tileinteraction.ts",
