--- a/riffshareiii/ts/application/tsconfig.json
+++ b/riffshareiii/ts/application/tsconfig.json
@@ -52,6 +52,8 @@
 		,"ui/mixer/fan/spearconnection.ts"
 		,"ui/mixer/fan/fanoutput.ts"
         ,"ui/buttons/iconlabelbutton.ts"
+
+		,"ui/undoredo/uiundoredo.ts"
 		
 		,"ui/iconlabels.ts"
         ,"ui/debugPane/debuglayer.ts"
