--- a/riffshareiii/parts/extensions/zvoogperformer/tsconfig.json
+++ b/riffshareiii/parts/extensions/zvoogperformer/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es2015"
         //,"outFile": "beep_plugin.js"
-        ,"outFile": "../../../web/performers/zvoog_perf/zvoogperf_plugin.js"
+        ,"outFile": "../../exe/plugins/performers/zvoog_perf/zvoogperf_plugin.js"
         //,"outDir":"../js"
 		,"strictNullChecks": true
 		,"alwaysStrict": true
@@ -24,8 +24,8 @@
 		,"types": [ ]
 	}
 	,"files": [
-        "../../mzxbx/publictypes/musicenginetypes.ts"
-		,"../../mzxbx/publictypes/musicenginedeclarations.ts"
+        "../../mzxbxapi/musicenginetypes.ts"
+		,"../../mzxbxapi/musicenginedeclarations.ts"
 		,"xwaf.ts"
         ,"zpinstr.ts"
 	]
