--- a/riffshareiii/parts/catalog/tsconfig.json
+++ b/riffshareiii/parts/catalog/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2015"
-        ,"outFile": "../../exe/plugins/catalog.js"
+        ,"outFile": "../exe/plugins/catalog.js"
         //,"outDir":"../js"
 		,"strictNullChecks": true
 		,"alwaysStrict": true
@@ -24,7 +24,7 @@
 	}
 	,"files": [
 		
-		"../../mzxbxapi/musicenginetypes.ts"
+		"../mzxbxapi/musicenginetypes.ts"
 		,"registrationlist.ts"
         
 	]
