--- a/riffshareiii/parts/extensions/importfrommidi/tsconfig.json
+++ b/riffshareiii/parts/extensions/importfrommidi/tsconfig.json
@@ -29,5 +29,8 @@
         "../../mzxbxapi/musicenginetypes.ts"
 		,"../../mzxbxapi/musicenginedeclarations.ts"
         ,"midiimport.ts"
+		,"midinames.ts"
+		,"miditypes.ts"
+		,"midiplugin.ts"
 	]
 }
