--- a/riffshareiii/parts/extensions/minium.fader/audio/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.fader/audio/tsconfig.json
@@ -23,8 +23,7 @@
     },
     "files": [
         "../../../mzxbxapi/musicenginetypes.ts",
-        "../.././mzxbxapi/musicenginedeclarations.ts",
-        "faderplugin.ts",
-        "faderfilter.ts"
+        "../../../mzxbxapi/musicenginedeclarations.ts",
+        "faderplugin.ts"
     ]
 }
