--- a/riffshareiii/parts/extensions/minium.percussion/gui/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.percussion/gui/tsconfig.json
@@ -27,5 +27,6 @@
         "../../../mzxbxapi/musicenginetypes.ts"
 		,"../../../mzxbxapi/musicenginedeclarations.ts"
         ,"gui.ts"
+		,"../list/names.ts"
 	]
 }
