--- a/riffshareiii/parts/extensions/minium.audiofile/player/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.audiofile/player/tsconfig.json
@@ -24,6 +24,7 @@
     "files": [
         "../../../mzxbxapi/musicenginetypes.ts",
         "../../../mzxbxapi/musicenginedeclarations.ts",
+        "../util/audiofileparametersutil.ts",
         "fileplayer.ts"
     ]
 }
