--- a/riffshareiii/parts/extensions/minium.audiofile/player/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.audiofile/player/tsconfig.json
@@ -25,6 +25,7 @@
         "../../../mzxbxapi/musicenginetypes.ts",
         "../../../mzxbxapi/musicenginedeclarations.ts",
         "../util/audiofileparametersutil.ts",
+		"../util/pitchshift.ts",
         "fileplayer.ts"
     ]
 }
