--- a/riffshareiii/parts/extensions/minium.pitch/audio/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.pitch/audio/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2015"
-        ,"outFile": "strum_plugin.js"
+        ,"outFile": "../../../exe/plugins/performers/miniumpitchchord1/audio/strum_plugin.js"
 		,"strictNullChecks": true
 		,"alwaysStrict": true
 		,"esModuleInterop": true
