--- a/riffshareiii/parts/extensions/minium.pitch/gui/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.pitch/gui/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es2015"
         //,"outFile": "beep_plugin.js"
-        ,"outFile": "chordpitch_gui.js"
+        ,"outFile": "../../../exe/plugins/performers/miniumpitchchord1/gui/chordpitch_gui.js"
         //,"outDir":"../js"
 		,"strictNullChecks": true
 		,"alwaysStrict": true
