--- a/riffshareiii/parts/extensions/minium.midi/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.midi/tsconfig.json
@@ -28,11 +28,11 @@
 		
         "../../mzxbxapi/musicenginetypes.ts"
 		,"../../mzxbxapi/musicenginedeclarations.ts"
-        ,"midiimport.ts"
+        ,"midiparser.ts"
 		,"../minium.percussion/list/names.ts"
 		,"../minium.pitch/list/names.ts"
 		,"miditypes.ts"
-		,"midiplugin.ts"
+		,"miniumidiiimportmusicplugin.ts"
 		,"midiconverter.ts"
 		,"projectr.ts"
 	]
