--- a/riffshareiii/parts/tilelevelsrc/tsconfig.json
+++ b/riffshareiii/parts/tilelevelsrc/tsconfig.json
@@ -30,6 +30,7 @@
 		,"./tilepath.ts"
         ,"./tilepolygon.ts"
         ,"./tilerectangle.ts"
+		,"./tileimage.ts"
         ,"./tiletext.ts"
 		,"../tilelevelapi/apitilelevel.ts"
     ]
